# SCRAPER_TEST

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  list_columns.py  main.py  pyproject.toml  test_fields.py  test_find_file.py  test_sp_rest.py  test_update_tags.py
data/: scraper.db
frontend/: Dockerfile  app.py  pyproject.toml
