[project]
name = "scraper-test"
version = "0.1.0"
description = "Scraper inteligente con OpenRouter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "playwright",
    "sqlalchemy",
    "aiosqlite",
    "pydantic-settings",
    "httpx",
    "crawlee[playwright]",
    "Office365-REST-Python-Client",
]

[project.scripts]
run-scraper = "main:main"
